3.0.0 (TBD)
------------------
- add quadkey_zoom option in CLI (#41, author @kylebarron)

2.0.1 (2020-01-28)
------------------
- Bug fix, use pygeos from pypi instead of git repo

2.0.0 (2020-01-28)
------------------
## Major refactor
- remove stack related code (lambda handler, serverless)
- switch to pygeos (#24)
- bug fixes
- add `last` pixel_method

1.0.0 (2019-12-13)
------------------
- add tif output
- fix overview creation
- add other Web templates

0.3.0 (2019-11-07)
------------------
- use aws lambda layer
- add `update_mosaic` utility function
- add `/tiles/point` endpoint to get points values from a mosaic
- add logs for mosaic creation
- add custom pixel methods
- add custom color maps

**API breacking change**
- rename `/mosaic/info/<mosaicid>` to `/mosaic/<mosaicid>/info`

0.2.0 (2019-09-30)
------------------
- update for lambda-proxy~=5.0 (#15)
- add `minimum_tile_cover` option for mosaic creation (#16)
- add `tile_cover_sort` option (#16)
- add verbosity for cli

0.1.0 (2019-09-05)
------------------
- add /create.html endpoint (#14)
- update to remotepixel/amazonlinux docker image