@@ -40,5 +40,5 @@ commands =
 [flake8]
 ignore = D203
 exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
-max-complexity = 14
+max-complexity = 15
 max-line-length = 90
